# gas_relayer_rust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
bins/relayer/: Cargo.toml
bins/relayer/src/: main.rs
crates/config/: Cargo.toml
crates/config/src/: config.rs
crates/db/: Cargo.toml
crates/db/migrations/: 20241106000002_add_monitoring_tables.sql
crates/db/src/: db.rs  lib.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: health_checks.rs  lib.rs  metrics_collector.rs  middleware.rs
crates/routes/: Cargo.toml
crates/routes/src/: db_health_handler.rs  lib.rs  metrics_handler.rs  routes.rs  states.rs
smart-contract/: package-lock.json  package.json
smart-contract/contracts/: SampleContract.sol  TrustedForwarder.sol
smart-contract/deployments/: TrustedForwarder.json  contract.md
