[package]
name = "metrics"
version = "0.1.0"
edition = "2021"

[dependencies]
axum.workspace = true
prometheus.workspace = true
axum-prometheus.workspace = true
metrics-crate.workspace = true
metrics-prometheus.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true