[package]
name = "routes"
version = "0.1.0"
edition = "2021"  # Change from 2024 to 2021

[dependencies]
axum.workspace = true
config.workspace = true
db.workspace = true
metrics.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
chrono.workspace = true